Fix crash when using box creator or structure creator and improve tooltips.